--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     --light-text-color: #f4f4fd;
     --accent-color: #4d5ae5;
     --accent-color-hover: #404bbf;
-
+    --border-color: #e7e9fc;
     --buttons-color: #f4f4fd;
     --subtitle-font-size: 20px;
     --title-font-size: 36px;
@@ -19,14 +19,41 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: var(--main-background-color);
     color: var(--text-color);
-
+    margin: 0;
     letter-spacing: 0.32px;
     line-height: 1.5;
 }
 
+img {
+    max-width: 100%;
+    height: auto;  
+    display: block;
+}
 
+h1,
+h2,
+h3,
+p,
+ul {
+    margin: 0;
+}
+
+ul {
+    padding: 0;
+    list-style: none;
+}
+
+a {
+    font-style: normal;
+    text-decoration: none;
+    color: inherit;
+}
 
 /* ----------------------- index ----------------------------- */
+
+.container{
+    max-width: 1158px;
+}
 .link {
     text-decoration: none;
 }
@@ -34,16 +61,27 @@ body {
 .list {
     list-style: none;
 }
+.header {
+    padding: 0 156px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--border-color);
+}
+
 
 .site-nav {
     color: var(--main-dark-color);
-
+    display: flex;
+    align-items: center;
+    height: 72px;
+    width: auto; 
 }
 
 .site-nav__logo {
     font-family: 'Raleway', sans-serif;
     color: var(--accent-color);
-
+    margin-right: 76px;
     font-size: var(--logo-font-size);
     font-weight: 800;
     line-height: 1.17;
@@ -51,6 +89,14 @@ body {
     text-transform: uppercase;
 }
 
+.site-nav .site-nav__list {
+    display: flex;
+    align-items: center;
+}
+
+.site-nav__list > li:not(:last-child) {
+    margin-right: 40px;
+}
 
 .site-nav-link {
     font-size: var(--main-font-size);
@@ -70,7 +116,14 @@ body {
     font-style: normal;
 }
 
+.adress .adress__list {
+    display: flex;
+    align-items: center;
+}
 
+.adress__list > li:not(:last-child) {
+    margin-right: 40px;
+}
 
 .adress__link{
     color:var(--text-color)
@@ -85,16 +138,23 @@ body {
     color: var(--main-dark-color);
 }
 
+
 .hero {
-
-    color: var(--white-text-color);
+    height: 600px;
+    width: auto;
     background-color: var(--main-dark-color);
-
+    color: var(--white-text-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .hero__title {
-
+    margin-bottom: 48px;
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
@@ -107,10 +167,12 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-
+    padding: 16px 32px;
     color: var(--white-text-color);
     background-color: var(--accent-color);
-
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
 
@@ -119,22 +181,40 @@ body {
     background-color: var(--accent-color-hover);
 }
 
+.values {
+    padding: 120px 156px;
+}
+
+.hidden {
+    visibility: hidden;
+}
 
 .values__subtitle {
     color: var(--main-dark-color);
-
+    margin-bottom: 8px;
     font-size: var(--subtitle-font-size);
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
 }
 
+.values__list {
+    display: flex;
+    justify-content: space-between;
+}
 
+.values__item:not(:last-child) {
+    margin-right: 24px;
+}
+
+.work {
+    padding: 0 156px 140px 156px;
+}
 
 .work__title {
     text-transform: capitalize;
     text-align: center;
-
+    margin-bottom: 72px;
     color: var(--main-dark-color);
     font-size: var(--title-font-size);
     font-weight: 700;
@@ -142,9 +222,13 @@ body {
     letter-spacing: 0.72px;
 }
 
+.work__list {
+    display: flex;
+    justify-content: space-between;
+}
 
 .team {
-
+    padding: 120px 156px 120px 156px;
     background-color: var(--secondary-background-color);
 }
 
@@ -156,16 +240,21 @@ body {
     letter-spacing: 0.72px;
     color: var(--main-dark-color);
     text-align: center;
-
+    margin-bottom: 72px;
 }
 
-
+.team__list {
+    display: flex;
+    justify-content: space-between;
+}
 
 .team__item {
-
+    padding-bottom: 32px;
     background-color: var(--main-background-color);
     text-align: center;
-
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+        0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team__subtitle {
@@ -173,12 +262,13 @@ body {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
-
+    margin-top: 32px;
+    margin-bottom: 8px;
     color: var(--main-dark-color);
 }
 
 .footer {
-  
+    padding: 100px 156px;
     background-color: var(--main-dark-color);
     color: var(--light-text-color);
 }
@@ -193,15 +283,29 @@ body {
     text-transform: uppercase;
 }
 
+.footer__text {
+    margin-top: 18px;
+}
 
 /* ----------------------- portfolio ----------------------------- */
 
-
+.portfolio {
+    padding: 96px 156px 120px 156px;
+}
 
 .accent-footer {
     color: var(--light-text-color);
 }
 
+.gallery__buttons-list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 72px;
+}
+
+.gallery__buttons-list li:not(:last-child) {
+    margin-right: 24px;
+}
 
 .gallery__button {
     font-family: 'Roboto', sans-serif;
@@ -211,7 +315,9 @@ body {
     letter-spacing: 0.04em;
     color: var(--accent-color);
     background-color: var(--buttons-color);
-
+    border: 1px solid var(--border-color);
+    padding: 12px 24px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
@@ -219,7 +325,34 @@ body {
 .gallery__button:hover {
     color: var(--main-background-color);
     background-color: var(--accent-color-hover);
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08),
+        0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+    border: 1px solid transparent;
+}
 
+.gallery__images-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.gallery__images-item img {
+    box-sizing: border-box;
+}
+
+.gallery__images-item {
+    flex-basis: calc((100% - 48px) / 3);
+    margin-right: 24px;
+    margin-bottom: 48px;
+}
+
+.gallery__images-item:nth-child(3n) {
+    margin-right: 0;
+}
+
+.gallery__images-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
 }
 
 .gallery__images-subtitle {
@@ -228,7 +361,16 @@ body {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
+    margin-bottom: 8px;
+}
 
+.gallery__content-wrapper {
+    max-width: 360px;
+    box-sizing: border-box;
+    border-bottom: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    padding: 32px 16px;
 }
 
 .gallery__images-text{
