--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ a {
 .container{
     max-width: 1158px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 .link {
     text-decoration: none;
@@ -67,6 +68,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 
 }
 .header {
@@ -111,6 +113,7 @@ a {
     letter-spacing: 0.32px;
     line-height: 1.5;
     color: var(--main-dark-color);
+    padding: 24px 0;
 }
 
 .site-nav-link:hover,
@@ -194,9 +197,13 @@ a {
     padding: 120px 0;
 }
 
-.visually-hidden{
-    visibility: hidden;
-}
+.visually-hidden {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+  }
 
 .values__subtitle {
     color: var(--main-dark-color);
@@ -210,6 +217,7 @@ a {
 .values__list {
     display: flex;
     justify-content: space-between;
+    gap: 24px;
 }
 .values__item{
     width: calc((100% - 72px) / 4);
